# chrono

./: .gitignore  CLAUDE.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6742430d2911_create_researches_and_timeline_nodes_.py  a1b2c3d4e5f6_add_topic_normalized.py  fa54caecf7c9_add_phase_name_to_timeline_nodes.py
backend/app/: config.py  main.py
backend/app/agents/: deps.py  detail.py  gap_analysis.py  milestone.py  similar_topic.py  synthesizer.py  tools.py
backend/app/data/: recommended.py
backend/app/db/: database.py  models.py  redis.py  replay.py  repository.py
backend/app/models/: research.py  runtime.py  session.py
backend/app/orchestrator/: dedup.py  event_publisher.py  messages.py  orchestrator.py  proposal.py  verification.py
backend/app/orchestrator/phases/: analysis.py  detail.py  skeleton.py  synthesis.py
backend/app/services/: llm.py  tavily.py
backend/app/session/: lifecycle.py  replay_session.py
backend/app/utils/: topic.py
backend/scripts/: check_architecture.py
backend/tests/: conftest.py  test_api_sse_contract.py  test_maintenance_mode.py  test_replay_contract.py  test_replay_session.py  test_repository_queries.py  test_session_events.py  test_session_lifecycle.py
docs/: ARCHITECTURE_RULES.md  CODING_CONVENTIONS.md  technical-design.md
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
plans/: app-homepage-plan.md  backend-runtime-refactor-research.md  date-correction-plan.md  db-persistence-plan.md  dedup-model-evaluation.md  (+38 more)
(+94 files in other folders)
