[project]
name = "chrono-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "pydantic-ai-slim[openai]",
    "sse-starlette",
    "tavily-python",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "redis>=7.2.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "httpx",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # 行长交给 formatter；B008 是 FastAPI Depends 的正常用法

[tool.pytest.ini_options]
asyncio_mode = "auto"
